# pagode

./: .gitignore  LICENSE  README.md  pyproject.toml
pagode/: main.py
